# Book-Sharing-Platform

./: .env  .env.example  .gitignore  BACKEND_README.md  Backend_README.docx  FRONTEND_README.md  Frontend_Guide.docx  GEMINI.md  app.py  config.py  extensions.py  models.py  notification_service.py  pyproject.toml  seed.py
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
instance/: book_sharing.db
migrations/versions/: 20260420_notifications_replace_download_logs.py  76774474f1aa_add_column_updated_at_in_users_table.py  86a4dcbb4523_add_column_updated_at_in_borrow_request_.py  c85a209035ea_initial.py
routes/: admin.py  auth.py  books.py  borrow.py  dashboard.py  favorites.py  inbox.py  profile.py  reports.py
static/css/: style.css
static/images/: Login Image.avif  Register Image.avif
static/js/: main.js
templates/: base.html
templates/admin/: books.html  dashboard.html  reports.html  users.html
templates/auth/: login.html  register.html
templates/base/: _skeleton.html  protected.html  public.html
templates/books/: _book_cards.html  _book_cards_compact.html  add.html  catalog.html  detail.html  edit.html
templates/borrow/: request.html
templates/dashboard/: borrowed.html  incoming_requests.html  index.html  my_books.html
templates/favorites/: wishlist.html
templates/inbox/: index.html
templates/profile/: edit.html  view.html
