[project]
name = "book-sharing-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.2.2",
    "werkzeug>=3.1.8",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]
